# pulga

./: Cargo.toml  LICENSE  README.md  build.rs  exofetch  exofetch.pro  install_pulga.sh  run-under-valgrind.sh  rustfmt.toml
.cargo/: config.toml
.github/workflows/: build-and-test.yml
h/: fetch.hh
old-cpp-code/: README.md
old-cpp-code/h/: fetch.hh
old-cpp-code/src/: main.cc
src/: _arts.rs  arts.rs  distros.rs  error.rs  exofetch.rs  fetch.cc  logo.rs  logos.rs  main.cc  main.rs  newfetch.rs  pulga.rs  screenres.rs  screenresx11.rs  scwayland.rs  sysinfo.rs  uname.rs  util.rs
whoami/: Cargo.toml
whoami/src/: lib.rs  unix.rs
