[package]
name = "pulga"
version = "0.1.0"
authors = ["Carmesim Project <36349314+vrmiguel@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
indoc = "1.0"
termion = "1.5"
whoami = { path = "whoami" }
sugars = "*"
