[package]
name = "pulga"
version = "0.1.0"
authors = ["Carmesim Project <36349314+vrmiguel@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8"
libc = "0.2"
indoc = "1.0"
termion = "1.5"
sugars = "3.0"
smallvec = "1.5"
x11 = { version = "2.18.2", optional = true }

[features]
on_x11 = ["x11"]