[package]
name = "pulga"
version = "0.1.0"
authors = ["Carmesim Project <36349314+vrmiguel@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
termion = "1.5"
sugars = "3.0"
smallvec = "1.5"
phf = { version = "0.8", features = ["macros"] }
x11 = { version = "2.18.2", optional = true }

[features]
use_xlib = ["x11"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
